--- a/client/src/app/modules/quotation/components/bodacc-fusion/bodacc-fusion.component.html
+++ b/client/src/app/modules/quotation/components/bodacc-fusion/bodacc-fusion.component.html
@@ -19,46 +19,64 @@
             </mat-panel-title>
             <ng-template [ngTemplateOutlet]="accordionTools"></ng-template>
           </mat-expansion-panel-header>
-          <table class="full-width">
+          <table class="full-width"
+            *ngFor="let mergedCompany of bodaccFusion.bodaccFusionMergingCompanies; let i = index ">
             <tr>
               <td>
-                <generic-input [(model)]="bodaccFusion.mergingCompanyDenomination" label="Dénomination"
-                  [form]="bodaccFusionForm" propertyName="mergingCompanyDenomination" [isMandatory]="true"
+                <generic-input [(model)]="mergedCompany.mergingCompanyDenomination" label="Dénomination"
+                  [form]="bodaccFusionForm" [propertyName]="'mergingCompanyDenomination'+i" [isMandatory]="true"
                   [isDisabled]="!editMode" [maxLength]="60"></generic-input>
               </td>
               <td>
-                <autocomplete-siren [(model)]="bodaccFusion.mergingCompanySiren" [form]="bodaccFusionForm"
-                  propertyName="mergingCompanySiren" [isMandatory]="true"
-                  (onOptionSelected)="fillSirenMergingCompany($event)">
+                <autocomplete-siren [(model)]="mergedCompany.mergingCompanySiren" [form]="bodaccFusionForm"
+                  [propertyName]="'mergingCompanySiren'+i" [isMandatory]="true"
+                  (onOptionSelected)="fillSirenMergingCompany($event,mergedCompany)">
                 </autocomplete-siren>
               </td>
               <td>
-                <generic-input [(model)]="bodaccFusion.mergingCompanyAddress" label="Adresse" [form]="bodaccFusionForm"
-                  propertyName="mergingCompanyAddress" [isMandatory]="true" [isDisabled]="!editMode" [maxLength]="100">
+                <generic-input [(model)]="mergedCompany.mergingCompanyAddress" label="Adresse" [form]="bodaccFusionForm"
+                  [propertyName]="'mergingCompanyAddress'+i" [isMandatory]="true" [isDisabled]="!editMode"
+                  [maxLength]="100">
                 </generic-input>
+              </td>
+              <td class="mini-fab-td"> <button *ngIf="editMode" mat-mini-fab color="warn"
+                  matTooltip="Supprimer la société absorbante" class="mini-fab"
+                  (click)="deleteMergedCompany(mergedCompany)">
+                  <mat-icon>delete</mat-icon>
+                </button>
               </td>
             </tr>
             <tr>
               <td>
-                <autocomplete-legal-form [(model)]="bodaccFusion.mergingCompanyLegalForm" [form]="bodaccFusionForm"
-                  propertyName="mergingCompanyLegalForm" [isMandatory]="true" [isDisabled]="!editMode">
+                <autocomplete-legal-form [(model)]="mergedCompany.mergingCompanyLegalForm" [form]="bodaccFusionForm"
+                  [propertyName]="'mergingCompanyLegalForm'+i" [isMandatory]="true" [isDisabled]="!editMode">
                 </autocomplete-legal-form>
               </td>
               <td>
-                <generic-input [(model)]="bodaccFusion.mergingCompanyShareCapital" label="Capital social"
-                  [form]="bodaccFusionForm" propertyName="mergingCompanyShareCapital" [isMandatory]="true"
+                <generic-input [(model)]="mergedCompany.mergingCompanyShareCapital" label="Capital social"
+                  [form]="bodaccFusionForm" [propertyName]="'mergingCompanyShareCapital'+i" [isMandatory]="true"
                   [isDisabled]="!editMode" type="number"></generic-input>
               </td>
               <td>
-                <generic-datepicker [(model)]="bodaccFusion.mergingCompanyRcsDeclarationDate"
-                  label="Date de dépôt au RCS" [form]="bodaccFusionForm" propertyName="mergingCompanyRcsDeclarationDate"
-                  [isMandatory]="true" [isDisabled]="!editMode"></generic-datepicker>
+                <generic-datepicker [(model)]="mergedCompany.mergingCompanyRcsDeclarationDate"
+                  label="Date de dépôt au RCS" [form]="bodaccFusionForm"
+                  [propertyName]="'mergingCompanyRcsDeclarationDate'+i" [isMandatory]="true" [isDisabled]="!editMode">
+                </generic-datepicker>
               </td>
               <td>
-                <autocomplete-competent-authority [(model)]="bodaccFusion.mergingCompanyRcsCompetentAuthority"
-                  [form]="bodaccFusionForm" propertyName="mergingCompanyRcsCompetentAuthority" [isMandatory]="true"
-                  label="Immatriculé au RCS" [filteredCompetentAuthorityTypeCode]="COMPETENT_AUTHORITY_TYPE_RCS_CODE">
+                <autocomplete-competent-authority [(model)]="mergedCompany.mergingCompanyRcsCompetentAuthority"
+                  [form]="bodaccFusionForm" [propertyName]="'mergingCompanyRcsCompetentAuthority'+i"
+                  [isMandatory]="true" label="Immatriculé au RCS"
+                  [filteredCompetentAuthorityTypeCode]="COMPETENT_AUTHORITY_TYPE_RCS_CODE">
                 </autocomplete-competent-authority>
+              </td>
+            </tr>
+          </table>
+          <table class="full-width">
+            <tr>
+              <td colspan="4">
+                <button *ngIf="editMode && bodaccFusion.bodaccFusionMergingCompanies" (click)="createMergedCompany()"
+                  mat-raised-button color="accent">Ajouter une société absorbante</button>
               </td>
             </tr>
           </table>
@@ -70,47 +88,64 @@
             </mat-panel-title>
             <ng-template [ngTemplateOutlet]="accordionTools"></ng-template>
           </mat-expansion-panel-header>
-          <table class="full-width">
+          <table class="full-width"
+            *ngFor="let absorbedCompany of bodaccFusion.bodaccFusionAbsorbedCompanies; let i = index ">
             <tr>
               <td>
-                <generic-input [(model)]="bodaccFusion.absorbedCompanyDenomination" label="Dénomination"
-                  [form]="bodaccFusionForm" propertyName="absorbedCompanyDenomination" [isMandatory]="true"
+                <generic-input [(model)]="absorbedCompany.absorbedCompanyDenomination" label="Dénomination"
+                  [form]="bodaccFusionForm" [propertyName]="'absorbedCompanyDenomination'+i" [isMandatory]="true"
                   [isDisabled]="!editMode" [maxLength]="60"></generic-input>
               </td>
               <td>
-                <autocomplete-siren [(model)]="bodaccFusion.absorbedCompanySiren" [form]="bodaccFusionForm"
-                  propertyName="absorbedCompanySiren" [isMandatory]="true"
-                  (onOptionSelected)="fillSirenAbsorbedCompany($event)">
+                <autocomplete-siren [(model)]="absorbedCompany.absorbedCompanySiren" [form]="bodaccFusionForm"
+                  [propertyName]="'absorbedCompanySiren'+i" [isMandatory]="true"
+                  (onOptionSelected)="fillSirenAbsorbedCompany($event,absorbedCompany)">
                 </autocomplete-siren>
               </td>
               <td>
-                <generic-input [(model)]="bodaccFusion.absorbedCompanyAddress" label="Adresse" [form]="bodaccFusionForm"
-                  propertyName="absorbedCompanyAddress" [isMandatory]="true" [isDisabled]="!editMode" [maxLength]="100">
+                <generic-input [(model)]="absorbedCompany.absorbedCompanyAddress" label="Adresse"
+                  [form]="bodaccFusionForm" [propertyName]="'absorbedCompanyAddress'+i" [isMandatory]="true"
+                  [isDisabled]="!editMode" [maxLength]="100">
                 </generic-input>
+              </td>
+              <td class="mini-fab-td"> <button *ngIf="editMode" mat-mini-fab color="warn"
+                  matTooltip="Supprimer la société absorbée" class="mini-fab"
+                  (click)="deleteAbsorbedCompany(absorbedCompany)">
+                  <mat-icon>delete</mat-icon>
+                </button>
               </td>
             </tr>
             <tr>
               <td>
-                <autocomplete-legal-form [(model)]="bodaccFusion.absorbedCompanyLegalForm" [form]="bodaccFusionForm"
-                  propertyName="absorbedCompanyLegalForm" [isMandatory]="true" [isDisabled]="!editMode">
+                <autocomplete-legal-form [(model)]="absorbedCompany.absorbedCompanyLegalForm" [form]="bodaccFusionForm"
+                  [propertyName]="'absorbedCompanyLegalForm'+i" [isMandatory]="true" [isDisabled]="!editMode">
                 </autocomplete-legal-form>
               </td>
               <td>
-                <generic-input [(model)]="bodaccFusion.absorbedCompanyShareCapital" label="Capital social"
-                  [form]="bodaccFusionForm" propertyName="absorbedCompanyShareCapital" [isMandatory]="true"
+                <generic-input [(model)]="absorbedCompany.absorbedCompanyShareCapital" label="Capital social"
+                  [form]="bodaccFusionForm" [propertyName]="'absorbedCompanyShareCapital'+i" [isMandatory]="true"
                   [isDisabled]="!editMode" type="number"></generic-input>
               </td>
               <td>
-                <generic-datepicker [(model)]="bodaccFusion.absorbedCompanyRcsDeclarationDate"
+                <generic-datepicker [(model)]="absorbedCompany.absorbedCompanyRcsDeclarationDate"
                   label="Date de dépôt au RCS" [form]="bodaccFusionForm"
-                  propertyName="absorbedCompanyRcsDeclarationDate" [isMandatory]="true" [isDisabled]="!editMode">
+                  [propertyName]="'absorbedCompanyRcsDeclarationDate'+i" [isMandatory]="true" [isDisabled]="!editMode">
                 </generic-datepicker>
               </td>
               <td>
-                <autocomplete-competent-authority [(model)]="bodaccFusion.absorbedCompanyRcsCompetentAuthority"
-                  [form]="bodaccFusionForm" propertyName="absorbedCompanyRcsCompetentAuthority" [isMandatory]="true"
-                  label="Immatriculé au RCS" [filteredCompetentAuthorityTypeCode]="COMPETENT_AUTHORITY_TYPE_RCS_CODE">
+                <autocomplete-competent-authority [(model)]="absorbedCompany.absorbedCompanyRcsCompetentAuthority"
+                  [form]="bodaccFusionForm" [propertyName]="'absorbedCompanyRcsCompetentAuthority'+i"
+                  [isMandatory]="true" label="Immatriculé au RCS"
+                  [filteredCompetentAuthorityTypeCode]="COMPETENT_AUTHORITY_TYPE_RCS_CODE">
                 </autocomplete-competent-authority>
+              </td>
+            </tr>
+          </table>
+          <table class="full-width">
+            <tr>
+              <td colspan="4">
+                <button *ngIf="editMode && bodaccFusion.bodaccFusionAbsorbedCompanies" (click)="createAbsorbedCompany()"
+                  mat-raised-button color="accent">Ajouter une société absorbée</button>
               </td>
             </tr>
           </table>
