--- a/client/src/app/modules/quotation/components/bodacc-main/bodacc-main.component.html
+++ b/client/src/app/modules/quotation/components/bodacc-main/bodacc-main.component.html
@@ -27,10 +27,18 @@
             </td>
           </tr>
         </table>
+        <table class="full-width">
+          <tr>
+            <td>
+              <generic-datepicker [(model)]="bodacc.dateOfPublication" label="Date de parution" [form]="bodaccForm"
+                propertyName="dateOfPublication" [isMandatory]="false" [isDisabled]="!editMode"></generic-datepicker>
+            </td>
+          </tr>
+        </table>
       </div>
     </mat-tab>
     <mat-tab label="Imprimé"
-      *ngIf="bodacc.bodaccPublicationType && (bodacc.bodaccPublicationType.code==BODACC_PUBLICATION_TYPE_SPLIT || bodacc.bodaccPublicationType.code==BODACC_PUBLICATION_TYPE_MERGING || bodacc.bodaccPublicationType.code==BODACC_PUBLICATION_TYPE_SALE_OF_BUSINESS)">
+      *ngIf="bodacc.bodaccPublicationType && (bodacc.bodaccPublicationType.code==BODACC_PUBLICATION_TYPE_PARTIAL_SPLIT ||bodacc.bodaccPublicationType.code==BODACC_PUBLICATION_TYPE_SPLIT || bodacc.bodaccPublicationType.code==BODACC_PUBLICATION_TYPE_MERGING || bodacc.bodaccPublicationType.code==BODACC_PUBLICATION_TYPE_SALE_OF_BUSINESS)">
       <bodacc-sale [bodaccSale]="bodacc.bodaccSale" [editMode]="editMode"
         [transfertFundsType]="bodacc.transfertFundsType" [affaire]="affaire"
         *ngIf="bodacc.bodaccPublicationType && bodacc.transfertFundsType && bodacc.bodaccPublicationType.code==BODACC_PUBLICATION_TYPE_SALE_OF_BUSINESS">
