--- a/client/src/app/routing/sidenav-list/sidenav-list.component.html
+++ b/client/src/app/routing/sidenav-list/sidenav-list.component.html
@@ -17,4 +17,8 @@
     [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/order' )>=0}">
     <mat-icon>shopping_cart</mat-icon> <span>Commande</span>
   </a>
+  <a mat-list-item routerLink="/administration" *ngIf="canViewAdministrationModule()"
+    [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/administration' )>=0}">
+    <mat-icon>settings</mat-icon> <span>Administration</span>
+  </a>
 </mat-nav-list>
