--- a/client/src/app/modules/miscellaneous/components/forms/select-billing-items/select-billing-items.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/select-billing-items/select-billing-items.component.html
@@ -1,10 +1,9 @@
 <mat-form-field class="full-width" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
   <mat-select [formControlName]="propertyName"
-    [required]="isMandatory && (conditionnalRequired==undefined || conditionnalRequired)" [compareWith]="compareWithId"
-    multiple>
+    [required]="isMandatory && (conditionnalRequired==undefined || conditionnalRequired)" [compareWith]="compareWithId">
     <mat-option *ngFor="let type of types" [value]="type">
-      {{type.billingType.label}} - TVA : {{(type.vat ? type.vat.rate : "")}} %
+      {{type.billingType.label}}
     </mat-option>
   </mat-select>
 </mat-form-field>
